implemented game lobby page and pusher logic for player join events

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -1,5 +1,6 @@
 extends layout 
 block content
+    script(src="/javascripts/_pusher.js" defer)
     script(src="/javascripts/chat.js" defer)
     script(src="/javascripts/dashboard.js" defer)
 
