--- a/views/game.pug
+++ b/views/game.pug
@@ -6,6 +6,7 @@ block content
         title= title 
         link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
         link(rel='stylesheet', href='/stylesheets/game_room.css')
+        script(src="/javascripts/_pusher.js" defer)
         script(src="/javascripts/chat.js" defer)
         script(src="/javascripts/game_room.js" defer)
 
