--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,9 @@ block content
     
     div.row
       div.col-sm-12.col-md-4.offset-md-4.d-grid
-        a(type="button" href="/dashboard").btn.btn-lg.btn-success Play Now
+        a(type="button" href="/dashboard").btn.btn-lg.btn-success 
+          i.fa.fa-gamepad 
+            span Play Now
 
   //- TODO: Fetch this from an API
   -
