implemented new join game logic in dashboard and lobby pages

--- a/views/dashboard.pug
+++ b/views/dashboard.pug
@@ -20,6 +20,7 @@ block content
         .row 
             //- Active Games Section
             .col-sm-12.col-md-9
+                .alert.alert-danger(role="alert" id="no-active-games-alert" hidden) No active games found, click "Create Game" to start a new one.
                 .row.row-cols-1.row-cols-md-4.g-2(id="active-games")
 
             //- Dashboard Chat Section
