implemented method for getting the state of a game

--- a/views/game.pug
+++ b/views/game.pug
@@ -9,6 +9,7 @@ block content
         script(src="/javascripts/_pusher.js" defer)
         script(src="/javascripts/chat.js" defer)
         script(src="/javascripts/game_room.js" defer)
+        script(src="/javascripts/game.js" defer)
 
         //- This input value is used by various scripts.
         input(type="hidden", id="roomId", name="roomId" value=gameId)
