--- a/views/game.pug
+++ b/views/game.pug
@@ -6,10 +6,12 @@ block content
         title= title 
         link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css')
         link(rel='stylesheet', href='/stylesheets/game_room.css')
+        link(rel='stylesheet', href='/stylesheets/cardSize.css')
         script(src="/javascripts/_pusher.js" defer)
         script(src="/javascripts/chat.js" defer)
         script(src="/javascripts/game_room.js" defer)
         script(src="/javascripts/game.js" defer)
+        
 
         //- This input value is used by various scripts.
         input(type="hidden", id="roomId", name="roomId" value=gameId)
@@ -59,10 +61,10 @@ block content
                                         .username-container
                                             #username.username.bg-dark=user.username
                                         #user-player.user-hand
-                                            each i in Array(7)
-                                                .my-card
-                                                    img(src="../images/unocards.png").face-up
-                                                    input(type="hidden")
+                                            //- //each i in Array(7)
+                                            //-     .my-card
+                                            //-         img(src="../images/unocards.png").face-up
+                                            //-         input(type="hidden")
 
                 .chat-sidebar.col-sm-3.flex-column.bg-dark
                     .chat-title-box.container.bg-dark.pt-2.pb-2
