--- a/views/game.pug
+++ b/views/game.pug
@@ -26,9 +26,6 @@ block content
                                 .row.w-100.h-100
                                     .col.top-player-container
                                         #top-player.user-hand.reverse-hand
-                                            each i in Array(7)
-                                                .my-card
-                                                    img(src="../images/unocards.png").face-down
                                         .username-container    
                                             #top-player-username.username.bg-dark Username
                         .middle.row
@@ -36,22 +33,16 @@ block content
                                 .username-container 
                                     #left-player-username.username.bg-dark Username
                                 #left-player.user-hand.side-player
-                                    each i in Array(7)
-                                        .my-card
-                                            img(src="../images/unocards.png").face-down
                                     
                             .center.col-sm
                                 #game-center.container.h-100
                                     .row.justify-content-center.align-items-center.w-100.h-100
-                                        .my-card
+                                        #last-played-card.my-card
                                             img(src="../images/unocards.png").face-up
                                         #draw-card.my-card
                                             img(src="../images/unocards.png").face-down
                             .col-sm.center-player.reverse
                                 #right-player.user-hand.side-player.reverse-hand
-                                    each i in Array(7)
-                                        .my-card
-                                            img(src="../images/unocards.png").face-down
                                 .username-container 
                                     #right-player-username.username.bg-dark Username
                         .bottom.row
@@ -61,10 +52,6 @@ block content
                                         .username-container
                                             #username.username.bg-dark=user.username
                                         #user-player.user-hand
-                                            //- //each i in Array(7)
-                                            //-     .my-card
-                                            //-         img(src="../images/unocards.png").face-up
-                                            //-         input(type="hidden")
 
                 .chat-sidebar.col-sm-3.flex-column.bg-dark
                     .chat-title-box.container.bg-dark.pt-2.pb-2
