implemented makeMove route

--- a/public/stylesheets/game_room.css
+++ b/public/stylesheets/game_room.css
@@ -226,7 +226,7 @@ body {
   border-radius: 8px;
 }
 
-.username::after {
+.username-current-player::after {
   content: "";
   position: absolute;
   display: block;
