Fixed Game Card Styling, Refactored Last Played Card Logic
- Fixed Game Card styling in game room so card logic uses calc() and
  variable sizes.
- Now the size of the svg image of the last_played card in game room is
  the correct size.
- Refactored Last Played Card logic order so that the order now gives
  more information about what color card it is.

--- a/public/stylesheets/game_room.css
+++ b/public/stylesheets/game_room.css
@@ -88,7 +88,8 @@ body {
 .face-up,
 .face-down {
   display: block;
-  height: auto;
+  height: 100px;
+  max-height: 100px;
   width: 100%;
   object-fit: cover;
 
@@ -104,10 +105,9 @@ body {
   z-index: 1000;
 }
 
-#draw {
-  margin: 0px;
-  top: 0px;
-  left: 0px;
+#draw-card {
+  height: 100px;
+  max-height: 100px;
 }
 
 .user-hand {
