implemented skip and reverse cards

--- a/views/game.pug
+++ b/views/game.pug
@@ -21,7 +21,7 @@ block content
                 .game-container.col
                     .game.container-fluid.h-100.d-flex.flex-column
                         
-                        .top.row
+                        .top.row.mt-5
                             .container-fluid.w-100.h-100
                                 .row.w-100.h-100
                                     .col.top-player-container
