--- a/views/index.pug
+++ b/views/index.pug
@@ -20,112 +20,33 @@ block content
       {
         id: 0,
         title: "Main Objective",
-        content: "The first player to use all cards in their hand each round scores points for all of the cards that the other players are holding. The first player to call-out “UNO” and play their last card is declared the WINNER."
+        content: "The First player to finish their hand but call 'UNO' before they place their last card down is declared the winner"
       },
       {
         id: 1,
-        title: "There are a maximum of 108 cards."
+        title: "Rule 1",
+        content: "The top card from the draw pile is placed in the card pile (The pile that is in the center of the game with face up cards)."
       },
       {
         id: 2,
-        title: "There are 19 Blue, Green, Red, and Yellow cards:"
+        title: "Rule 2",
+        content: "Players, taking turns, must then place a card on top of the card pile that matches by number, color, or word."
       },
       {
         id: 3,
-        title: "1.",
-        content: "0-9 cards per color"
+        title: "Rule 3",
+        content: "If a player has no playable card, they must draw a card from the draw pile. If the player still has no playable card, they are skipped."
       },
-      {
-        id: 4,
-        title: "2.",
-        content: "2 skip cards per color"
-      },
+      
       {
         id: 5,
-        title: "3.",
-        content: "2 reverse cards per color"
-      },
-      {
-        id: 6,
-        title: "4.",
-        content: "2 draw 2 cards per color"
-      },
-      {
-        id: 7,
-        title: "5.",
-        content: "4 wild cards (1 per color)"
-      },
-      {
-        id: 8,
-        title: "6.",
-        content: "4 wild draw 4 cards (1 per color)"
-      },
-      {
-        id: 9,
-        title: "Special cards and what they do:"
-      },
-      {
-        id: 10,
-        title: "1.",
-        content: "Draw 2 card - The next player must draw 2 cards from the draw pile and forfeit their turn."
-      },
-      {
-        id: 11,
-        title: "2.",
-        content: "Reverse card - The order of the game is reversed."
-      },
-      {
-        id: 12,
-        title: "3.",
-        content: "Skip card - The next player is skipped."
-      },
-      {
-        id: 13,
-        title: "4.",
-        content: "Wild card - The color of the current card may be switched to any color and the current player can continue playing."
-      },
-      {
-        id: 14,
-        title: "5.",
-        content: "Wild draw 4 card - The next player must draw 4 cards and forfeit their turn. The current player must also select a new current color."
-      },
-      {
-        id: 15,
-        title: "Pre-game"
-      },
-      {
-        id: 16,
-        title: "Rule 1",
-        content: "Each player is dealt 7 cards."
-      },
-      {
-        id: 17,
-        title: "Rule #2",
-        content: "Remaining cards are now the draw pile."
-      },
-      {
-        id: 16,
-        title: "Game"
-      },
-      {
-        id: 18,
-        title: "Rule 1",
-        content: "The top card from the draw pile is placed in the card pile."
-      },
-      {
-        id: 19,
-        title: "Rule 2",
-        content: "Players, taking turns, must then place a card on top of the card pile that matches by number, color, or word. If a player has no playable card, they must draw a card from the draw pile. If the player still has no playable card, they are skipped."
-      },
-      {
-        id: 21,
         title: "Rule 3",
         content: "Before a player plays their next to last card, they must press “UNO”. If they fail to do this and “no uno” is pressed, they must draw 4 cards from the draw pile."
       },
       {
-        id: 22,
+        id: 6,
         title: "Rule 4",
-        content: "Once a player plays their last card, the game is over and they are declared the WINNER."
+        content: "Once a player plays their last card, after successfully calling 'UNO', the game is over and that player is declared the WINNER."
       },
     ]
 
