added game direction to game room page

--- a/views/game.pug
+++ b/views/game.pug
@@ -36,12 +36,13 @@ block content
                                 #left-player.user-hand.side-player
                                     
                             .center.col-sm
-                                #game-center.container.h-100
+                                #game-center.container.h-100.text-center
                                     .row.justify-content-center.align-items-center.w-100.h-100
                                         #last-played-card.my-card
                                             img(src="../images/unocards.png").face-up
                                         #draw-card.my-card
                                             img(src="../images/unocards.png").face-down
+                                        #game-direction
                             .col-sm.center-player.reverse
                                 #right-player.user-hand.side-player.reverse-hand
                                 .username-container 
