implemented change color selector

--- a/public/stylesheets/game_room.css
+++ b/public/stylesheets/game_room.css
@@ -239,6 +239,10 @@ body {
   background-color: rgb(0, 255, 0);
 }
 
+.color-card {
+  height: 50px
+}
+
 /* ================================================================================ */
 /* Chat-sidebar*/
 /* ================================================================================ */
